--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ header{
 
  nav {
   width: 100%;
-  height: 12%;
+  min-height: 12%;
   background-color: #383E4C;
   position: fixed;
   z-index: 999;
@@ -51,6 +51,11 @@ header{
    border: 1px solid #999999;
    padding: 11px 17px;
  }
+
+
+  .icon {
+    display: none;
+  }
 
 
  .header-title {
@@ -267,7 +272,7 @@ header{
   margin-top: 150px;
   margin-bottom: 60px;
   background-image: url('img/bg-3.jpg');
-  min-height: 88vh;
+  height: 88vh;
   opacity: 1;
 }
 
@@ -322,6 +327,7 @@ textarea {
   background: #222;
   color: #fff;
   margin-top: 30px;
+  cursor: pointer;
 }
 
 
